j'ai rajouter un bundle twig-extra j'ai modifier le base.html.twig j'ai modifier le footer j'ai modifier le fichier style css en base.css j'ai rajouterun home.css

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,7 +1,7 @@
 security:
     encoders:
         App\Entity\User:
-            algorithm: bcrypt
+            algorithm: auto
 
 
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
@@ -37,4 +37,5 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
          - { path: ^/user, roles: ROLE_ADMIN }
+         # - { path: ^/register, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
