--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,6 +36,9 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-         - { path: ^/user, roles: ROLE_ADMIN }
+         #- { path: ^/user, roles: ROLE_ADMIN }
          # - { path: ^/register, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+        # - { path: ^/tools, roles: ROLE_USER } 
+        # - { path: ^/tools, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+
